--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mainTitle">GPA Caluclator</h1>
+        <h1 class="mainTitle">GPA Calculator</h1>
         <h2 class="subtitle">Add a new term to start</h2>
     </div>
     <form id="termForm" class="termForm">
